Fix tickets section ticket overflow

--- a/src/app/components/tickets/tickets.component.scss
+++ b/src/app/components/tickets/tickets.component.scss
@@ -198,7 +198,7 @@
         }
 
         app-ticket {
-          height: 500px;
+          height: 474px;
         }
 
         app-ticket.smaller {
